# Sentinel-Agent

./: .dockerignore  .gitignore  Dockerfile  README.md  ROADMAP.md  alembic.ini  pyproject.toml
.claude/: settings.local.json
agent/: __init__.py
agent/auth/: __init__.py  manager.py
agent/collection/: __init__.py  models.py  repositories.py  service.py
agent/common/: __init__.py  kubernetes.py  logging.py
agent/config/: __init__.py  settings.py
agent/detection/: __init__.py  incident.py  models.py  polling.py  repositories.py  service.py  watcher.py
agent/diagnostics/: __init__.py  models.py  repositories.py  service.py
agent/execution/: __init__.py
agent/heartbeat/: __init__.py  client.py  models.py  scheduler.py  service.py
alembic/: README  env.py
docs/: required-updates.md
src/: __init__.py  main.py
tests/: test_alembic.py  test_auth.py  test_bootstrap.py  test_collection_collectors.py  test_collection_integration.py  test_collection_models.py  test_collection_repository.py  test_collection_service.py  test_detection_models.py  test_detection_repository.py  test_detection_service.py  test_detectors.py  test_diagnostics_analyzers.py  test_diagnostics_models.py  test_diagnostics_repository.py  test_diagnostics_service.py  test_heartbeat.py  test_helm.py  test_kubernetes.py  test_models.py  test_registration.py  test_repositories.py  test_runtime_manager.py  test_settings.py  test_storage.py  test_transport_client.py  test_transport_models.py  test_transport_repository.py  test_transport_retry.py  test_transport_service.py
(+52 files in other folders)
