[project]
name = "sentinel-agent"
version = "0.1.0"
description = "Kubernetes security agent: detection, collection, diagnostics, and remediation."
authors = [
    {name = "Aarav Agarwal", email = "aara.knp.08@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
pydantic = "^2.13.4"
pydantic-settings = "^2.14.1"
sqlalchemy = "^2.0.50"
alembic = "^1.18.4"
httpx = "^0.28.1"
kubernetes = "^36.0.2"
structlog = "^26.1.0"
apscheduler = "^3.11.2"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "ruff (>=0.15.16,<0.16.0)",
    "mypy (>=2.1.0,<3.0.0)",
    "types-pyyaml (>=6.0.12.20260518,<7.0.0.0)"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
addopts = "-v --tb=short"
markers = [
    "helm: Helm chart rendering tests (skipped if helm CLI not available)",
]
